Assign3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    VOID
    WITH
    IMPORT
    DEBUGGER
    EXTENDS
    THIS
    DELETE
    LCOMMENT
    SETPROP
    COLON
    GETP
    CASE
    FOR
    TRY
    DEFAULT
    NEW
    SWITCH
    CATCH
    SETP
    INSTANCEOF
    GETPROP
    CONDOP
    DO
    CONST
    EXPORT
    CLASS
    REGEX
    YIELD
    FINALLY
    IN
    BCOMMENT
    ALERT
    SUPER
    THROW

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     block -> LEFTBRACE statements RIGHTBRACE
Rule 4     block -> LEFTBRACE RIGHTBRACE
Rule 5     statements -> statement statements
Rule 6     statements -> statement
Rule 7     statement -> assignment SEMICOLON
Rule 8     statement -> reassignment SEMICOLON
Rule 9     statement -> BREAK SEMICOLON
Rule 10    statement -> CONTINUE SEMICOLON
Rule 11    statement -> RETURN expression SEMICOLON
Rule 12    statement -> expression SEMICOLON
Rule 13    statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
Rule 14    statement -> functioncall SEMICOLON
Rule 15    statement -> if
Rule 16    statement -> ifelse
Rule 17    statement -> whileloop
Rule 18    statement -> funcdecl
Rule 19    assignment -> VAR assignlist
Rule 20    assignment -> LEFTPAREN assignment RIGHTPAREN
Rule 21    assignlist -> ID EQ expression COMMA assignlist
Rule 22    assignlist -> ID COMMA assignlist
Rule 23    assignlist -> arraydecl COMMA assignlist
Rule 24    assignlist -> ID EQ expression
Rule 25    assignlist -> ID
Rule 26    assignlist -> arraydecl
Rule 27    reassignment -> ID EQ expression
Rule 28    reassignment -> ID PLUSEQ expression
Rule 29    reassignment -> ID MINUSEQ expression
Rule 30    reassignment -> ID INTOEQ expression
Rule 31    reassignment -> ID DIVEQ expression
Rule 32    reassignment -> ID INCR
Rule 33    reassignment -> ID DECR
Rule 34    reassignment -> ID LSHIFTEQ expression
Rule 35    reassignment -> ID RSHIFTEQ expression
Rule 36    reassignment -> ID URSHIFTEQ expression
Rule 37    reassignment -> ID ANDEQ expression
Rule 38    reassignment -> ID OREQ expression
Rule 39    reassignment -> ID XOREQ expression
Rule 40    reassignment -> ID MODEQ expression
Rule 41    reassignment -> arraydecl
Rule 42    reassignment -> LEFTPAREN reassignment RIGHTPAREN
Rule 43    arraydecl -> ID EQ LEFTBRACKET arrayList RIGHTBRACKET
Rule 44    arrayList -> expression COMMA arrayList
Rule 45    arrayList -> arraydecl COMMA arrayList
Rule 46    arrayList -> arraydecl
Rule 47    arrayList -> expression
Rule 48    arrayList -> <empty>
Rule 49    expression -> EVAL LEFTPAREN statements RIGHTPAREN
Rule 50    expression -> EVAL LEFTPAREN block RIGHTPAREN
Rule 51    expression -> expression PLUS expression
Rule 52    expression -> expression MINUS expression
Rule 53    expression -> expression INTO expression
Rule 54    expression -> expression DIVIDE expression
Rule 55    expression -> expression MOD expression
Rule 56    expression -> expression EXPO expression
Rule 57    expression -> LEFTPAREN expression RIGHTPAREN
Rule 58    expression -> NOT expression
Rule 59    expression -> expression BINAND expression
Rule 60    expression -> expression BINOR expression
Rule 61    expression -> expression BINXOR expression
Rule 62    expression -> BINNOT expression
Rule 63    expression -> expression LT expression
Rule 64    expression -> expression GT expression
Rule 65    expression -> expression DOUBLEEQ expression
Rule 66    expression -> expression NOTEQUAL expression
Rule 67    expression -> expression LTE expression
Rule 68    expression -> expression GTE expression
Rule 69    expression -> expression STREQUAL expression
Rule 70    expression -> expression STRNEQUAL expression
Rule 71    expression -> expression AND expression
Rule 72    expression -> expression OR expression
Rule 73    expression -> expression LSHIFT expression
Rule 74    expression -> expression RSHIFT expression
Rule 75    expression -> expression URSHIFT expression
Rule 76    expression -> basicTypes
Rule 77    expression -> functioncall
Rule 78    expression -> arrayCall
Rule 79    expression -> TYPEOF expression
Rule 80    arrayCall -> ID LEFTBRACKET expression RIGHTBRACKET
Rule 81    basicTypes -> NUMBER
Rule 82    basicTypes -> STRING
Rule 83    basicTypes -> ID
Rule 84    basicTypes -> UNDEFINED
Rule 85    functioncall -> ID LEFTPAREN argList RIGHTPAREN
Rule 86    argList -> expression
Rule 87    argList -> expression COMMA argList
Rule 88    argList -> <empty>
Rule 89    if -> IF expression cblock
Rule 90    ifelse -> IF expression cblock ELSE cblock
Rule 91    ifelse -> IF expression cblock ELSE if
Rule 92    ifelse -> IF expression cblock ELSE ifelse
Rule 93    cblock -> block
Rule 94    cblock -> statement
Rule 95    whileloop -> WHILE LEFTPAREN expression RIGHTPAREN cblock
Rule 96    funcdecl -> FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
Rule 97    funcdecl -> VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
Rule 98    statement -> assignment
Rule 99    statement -> reassignment
Rule 100   statement -> BREAK
Rule 101   statement -> CONTINUE
Rule 102   statement -> expression
Rule 103   statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
Rule 104   statement -> functioncall

Terminals, with rules where they appear

ALERT                : 
AND                  : 71
ANDEQ                : 37
BCOMMENT             : 
BINAND               : 59
BINNOT               : 62
BINOR                : 60
BINXOR               : 61
BREAK                : 9 100
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 
COMMA                : 21 22 23 44 45 87
CONDOP               : 
CONSOLE              : 13 103
CONST                : 
CONTINUE             : 10 101
DEBUGGER             : 
DECR                 : 33
DEFAULT              : 
DELETE               : 
DIVEQ                : 31
DIVIDE               : 54
DO                   : 
DOT                  : 13 103
DOUBLEEQ             : 65
ELSE                 : 90 91 92
EQ                   : 21 24 27 43 97
EVAL                 : 49 50
EXPO                 : 56
EXPORT               : 
EXTENDS              : 
FINALLY              : 
FOR                  : 
FUNCTION             : 96 97
GETP                 : 
GETPROP              : 
GT                   : 64
GTE                  : 68
ID                   : 21 22 24 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40 43 80 83 85 96 97
IF                   : 89 90 91 92
IMPORT               : 
IN                   : 
INCR                 : 32
INSTANCEOF           : 
INTO                 : 53
INTOEQ               : 30
LCOMMENT             : 
LEFTBRACE            : 3 4
LEFTBRACKET          : 43 80
LEFTPAREN            : 13 20 42 49 50 57 85 95 96 97 103
LOG                  : 13 103
LSHIFT               : 73
LSHIFTEQ             : 34
LT                   : 63
LTE                  : 67
MINUS                : 52
MINUSEQ              : 29
MOD                  : 55
MODEQ                : 40
NEW                  : 
NOT                  : 58
NOTEQUAL             : 66
NUMBER               : 81
OR                   : 72
OREQ                 : 38
PLUS                 : 51
PLUSEQ               : 28
REGEX                : 
RETURN               : 11
RIGHTBRACE           : 3 4
RIGHTBRACKET         : 43 80
RIGHTPAREN           : 13 20 42 49 50 57 85 95 96 97 103
RSHIFT               : 74
RSHIFTEQ             : 35
SEMICOLON            : 7 8 9 10 11 12 13 14 97
SETP                 : 
SETPROP              : 
STREQUAL             : 69
STRING               : 82
STRNEQUAL            : 70
SUPER                : 
SWITCH               : 
THIS                 : 
THROW                : 
TRY                  : 
TYPEOF               : 79
UNDEFINED            : 84
URSHIFT              : 75
URSHIFTEQ            : 36
VAR                  : 19 97
VOID                 : 
WHILE                : 95
WITH                 : 
XOREQ                : 39
YIELD                : 
error                : 

Nonterminals, with rules where they appear

argList              : 85 87 96 97
arrayCall            : 78
arrayList            : 43 44 45
arraydecl            : 23 26 41 45 46
assignlist           : 19 21 22 23
assignment           : 7 20 98
basicTypes           : 76
block                : 1 50 93
cblock               : 89 90 90 91 92 95 96 97
expression           : 11 12 13 21 24 27 28 29 30 31 34 35 36 37 38 39 40 44 47 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59 59 60 60 61 61 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 79 80 86 87 89 90 91 92 95 102 103
funcdecl             : 18
functioncall         : 14 77 104
if                   : 15 91
ifelse               : 16 92
reassignment         : 8 42 99
start                : 0
statement            : 5 6 94
statements           : 2 3 5 49
whileloop            : 17

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) block -> . LEFTBRACE statements RIGHTBRACE
    (4) block -> . LEFTBRACE RIGHTBRACE
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . reassignment SEMICOLON
    (9) statement -> . BREAK SEMICOLON
    (10) statement -> . CONTINUE SEMICOLON
    (11) statement -> . RETURN expression SEMICOLON
    (12) statement -> . expression SEMICOLON
    (13) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
    (14) statement -> . functioncall SEMICOLON
    (15) statement -> . if
    (16) statement -> . ifelse
    (17) statement -> . whileloop
    (18) statement -> . funcdecl
    (98) statement -> . assignment
    (99) statement -> . reassignment
    (100) statement -> . BREAK
    (101) statement -> . CONTINUE
    (102) statement -> . expression
    (103) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
    (104) statement -> . functioncall
    (19) assignment -> . VAR assignlist
    (20) assignment -> . LEFTPAREN assignment RIGHTPAREN
    (27) reassignment -> . ID EQ expression
    (28) reassignment -> . ID PLUSEQ expression
    (29) reassignment -> . ID MINUSEQ expression
    (30) reassignment -> . ID INTOEQ expression
    (31) reassignment -> . ID DIVEQ expression
    (32) reassignment -> . ID INCR
    (33) reassignment -> . ID DECR
    (34) reassignment -> . ID LSHIFTEQ expression
    (35) reassignment -> . ID RSHIFTEQ expression
    (36) reassignment -> . ID URSHIFTEQ expression
    (37) reassignment -> . ID ANDEQ expression
    (38) reassignment -> . ID OREQ expression
    (39) reassignment -> . ID XOREQ expression
    (40) reassignment -> . ID MODEQ expression
    (41) reassignment -> . arraydecl
    (42) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (49) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression INTO expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression EXPO expression
    (57) expression -> . LEFTPAREN expression RIGHTPAREN
    (58) expression -> . NOT expression
    (59) expression -> . expression BINAND expression
    (60) expression -> . expression BINOR expression
    (61) expression -> . expression BINXOR expression
    (62) expression -> . BINNOT expression
    (63) expression -> . expression LT expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression DOUBLEEQ expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . expression LTE expression
    (68) expression -> . expression GTE expression
    (69) expression -> . expression STREQUAL expression
    (70) expression -> . expression STRNEQUAL expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression LSHIFT expression
    (74) expression -> . expression RSHIFT expression
    (75) expression -> . expression URSHIFT expression
    (76) expression -> . basicTypes
    (77) expression -> . functioncall
    (78) expression -> . arrayCall
    (79) expression -> . TYPEOF expression
    (85) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (89) if -> . IF expression cblock
    (90) ifelse -> . IF expression cblock ELSE cblock
    (91) ifelse -> . IF expression cblock ELSE if
    (92) ifelse -> . IF expression cblock ELSE ifelse
    (95) whileloop -> . WHILE LEFTPAREN expression RIGHTPAREN cblock
    (96) funcdecl -> . FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
    (97) funcdecl -> . VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
    (43) arraydecl -> . ID EQ LEFTBRACKET arrayList RIGHTBRACKET
    (81) basicTypes -> . NUMBER
    (82) basicTypes -> . STRING
    (83) basicTypes -> . ID
    (84) basicTypes -> . UNDEFINED
    (80) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    LEFTBRACE       shift and go to state 23
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    RETURN          shift and go to state 6
    CONSOLE         shift and go to state 16
    VAR             shift and go to state 21
    LEFTPAREN       shift and go to state 18
    ID              shift and go to state 22
    EVAL            shift and go to state 19
    NOT             shift and go to state 30
    BINNOT          shift and go to state 24
    TYPEOF          shift and go to state 15
    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FUNCTION        shift and go to state 3
    NUMBER          shift and go to state 2
    STRING          shift and go to state 14
    UNDEFINED       shift and go to state 20

    whileloop                      shift and go to state 8
    statements                     shift and go to state 1
    assignment                     shift and go to state 17
    funcdecl                       shift and go to state 25
    reassignment                   shift and go to state 9
    start                          shift and go to state 11
    arrayCall                      shift and go to state 10
    functioncall                   shift and go to state 28
    arraydecl                      shift and go to state 29
    statement                      shift and go to state 13
    ifelse                         shift and go to state 12
    basicTypes                     shift and go to state 31
    expression                     shift and go to state 32
    block                          shift and go to state 33
    if                             shift and go to state 7

state 1

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 2

    (81) basicTypes -> NUMBER .

    PLUS            reduce using rule 81 (basicTypes -> NUMBER .)
    MINUS           reduce using rule 81 (basicTypes -> NUMBER .)
    INTO            reduce using rule 81 (basicTypes -> NUMBER .)
    DIVIDE          reduce using rule 81 (basicTypes -> NUMBER .)
    MOD             reduce using rule 81 (basicTypes -> NUMBER .)
    EXPO            reduce using rule 81 (basicTypes -> NUMBER .)
    BINAND          reduce using rule 81 (basicTypes -> NUMBER .)
    BINOR           reduce using rule 81 (basicTypes -> NUMBER .)
    BINXOR          reduce using rule 81 (basicTypes -> NUMBER .)
    LT              reduce using rule 81 (basicTypes -> NUMBER .)
    GT              reduce using rule 81 (basicTypes -> NUMBER .)
    DOUBLEEQ        reduce using rule 81 (basicTypes -> NUMBER .)
    NOTEQUAL        reduce using rule 81 (basicTypes -> NUMBER .)
    LTE             reduce using rule 81 (basicTypes -> NUMBER .)
    GTE             reduce using rule 81 (basicTypes -> NUMBER .)
    STREQUAL        reduce using rule 81 (basicTypes -> NUMBER .)
    STRNEQUAL       reduce using rule 81 (basicTypes -> NUMBER .)
    AND             reduce using rule 81 (basicTypes -> NUMBER .)
    OR              reduce using rule 81 (basicTypes -> NUMBER .)
    LSHIFT          reduce using rule 81 (basicTypes -> NUMBER .)
    RSHIFT          reduce using rule 81 (basicTypes -> NUMBER .)
    URSHIFT         reduce using rule 81 (basicTypes -> NUMBER .)
    SEMICOLON       reduce using rule 81 (basicTypes -> NUMBER .)
    BREAK           reduce using rule 81 (basicTypes -> NUMBER .)
    CONTINUE        reduce using rule 81 (basicTypes -> NUMBER .)
    RETURN          reduce using rule 81 (basicTypes -> NUMBER .)
    CONSOLE         reduce using rule 81 (basicTypes -> NUMBER .)
    VAR             reduce using rule 81 (basicTypes -> NUMBER .)
    LEFTPAREN       reduce using rule 81 (basicTypes -> NUMBER .)
    ID              reduce using rule 81 (basicTypes -> NUMBER .)
    EVAL            reduce using rule 81 (basicTypes -> NUMBER .)
    NOT             reduce using rule 81 (basicTypes -> NUMBER .)
    BINNOT          reduce using rule 81 (basicTypes -> NUMBER .)
    TYPEOF          reduce using rule 81 (basicTypes -> NUMBER .)
    IF              reduce using rule 81 (basicTypes -> NUMBER .)
    WHILE           reduce using rule 81 (basicTypes -> NUMBER .)
    FUNCTION        reduce using rule 81 (basicTypes -> NUMBER .)
    NUMBER          reduce using rule 81 (basicTypes -> NUMBER .)
    STRING          reduce using rule 81 (basicTypes -> NUMBER .)
    UNDEFINED       reduce using rule 81 (basicTypes -> NUMBER .)
    $end            reduce using rule 81 (basicTypes -> NUMBER .)
    LEFTBRACE       reduce using rule 81 (basicTypes -> NUMBER .)
    RIGHTBRACE      reduce using rule 81 (basicTypes -> NUMBER .)
    RIGHTPAREN      reduce using rule 81 (basicTypes -> NUMBER .)
    ELSE            reduce using rule 81 (basicTypes -> NUMBER .)
    RIGHTBRACKET    reduce using rule 81 (basicTypes -> NUMBER .)
    COMMA           reduce using rule 81 (basicTypes -> NUMBER .)


state 3

    (96) funcdecl -> FUNCTION . ID LEFTPAREN argList RIGHTPAREN cblock

    ID              shift and go to state 34


state 4

    (89) if -> IF . expression cblock
    (90) ifelse -> IF . expression cblock ELSE cblock
    (91) ifelse -> IF . expression cblock ELSE if
    (92) ifelse -> IF . expression cblock ELSE ifelse
    (49) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression INTO expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression EXPO expression
    (57) expression -> . LEFTPAREN expression RIGHTPAREN
    (58) expression -> . NOT expression
    (59) expression -> . expression BINAND expression
    (60) expression -> . expression BINOR expression
    (61) expression -> . expression BINXOR expression
    (62) expression -> . BINNOT expression
    (63) expression -> . expression LT expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression DOUBLEEQ expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . expression LTE expression
    (68) expression -> . expression GTE expression
    (69) expression -> . expression STREQUAL expression
    (70) expression -> . expression STRNEQUAL expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression LSHIFT expression
    (74) expression -> . expression RSHIFT expression
    (75) expression -> . expression URSHIFT expression
    (76) expression -> . basicTypes
    (77) expression -> . functioncall
    (78) expression -> . arrayCall
    (79) expression -> . TYPEOF expression
    (81) basicTypes -> . NUMBER
    (82) basicTypes -> . STRING
    (83) basicTypes -> . ID
    (84) basicTypes -> . UNDEFINED
    (85) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (80) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    EVAL            shift and go to state 19
    LEFTPAREN       shift and go to state 35
    NOT             shift and go to state 30
    BINNOT          shift and go to state 24
    TYPEOF          shift and go to state 15
    NUMBER          shift and go to state 2
    STRING          shift and go to state 14
    ID              shift and go to state 36
    UNDEFINED       shift and go to state 20

    expression                     shift and go to state 38
    arrayCall                      shift and go to state 10
    functioncall                   shift and go to state 37
    basicTypes                     shift and go to state 31

state 5

    (95) whileloop -> WHILE . LEFTPAREN expression RIGHTPAREN cblock

    LEFTPAREN       shift and go to state 39


state 6

    (11) statement -> RETURN . expression SEMICOLON
    (49) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (50) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression INTO expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression EXPO expression
    (57) expression -> . LEFTPAREN expression RIGHTPAREN
    (58) expression -> . NOT expression
    (59) expression -> . expression BINAND expression
    (60) expression -> . expression BINOR expression
    (61) expression -> . expression BINXOR expression
    (62) expression -> . BINNOT expression
    (63) expression -> . expression LT expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression DOUBLEEQ expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . expression LTE expression
    (68) expression -> . expression GTE expression
    (69) expression -> . expression STREQUAL expression
    (70) expression -> . expression STRNEQUAL expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression LSHIFT expression
    (74) expression -> . expression RSHIFT expression
    (75) expression -> . expression URSHIFT expression
    (76) expression -> . basicTypes
    (77) expression -> . functioncall
    (78) expression -> . arrayCall
    (79) expression -> . TYPEOF expression
    (81) basicTypes -> . NUMBER
    (82) basicTypes -> . STRING
    (83) basicTypes -> . ID
    (84) basicTypes -> . UNDEFINED
    (85) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (80) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    EVAL            shift and go to state 19
    LEFTPAREN       shift and go to state 35
    NOT             shift and go to state 30
    BINNOT          shift and go to state 24
    TYPEOF          shift and go to state 15
    NUMBER          shift and go to state 2
    STRING          shift and go to state 14
    ID              shift and go to state 36
    UNDEFINED       shift and go to state 20

    arrayCall                      shift and go to state 10
    functioncall                   shift and go to state 37
    expression                     shift and go to state 40
    basicTypes                     shift and go to state 31

state 7

    (15) statement -> if .

    BREAK           reduce using rule 15 (statement -> if .)
    CONTINUE        reduce using rule 15 (statement -> if .)
    RETURN          reduce using rule 15 (statement -> if .)
    CONSOLE         reduce using rule 15 (statement -> if .)
    VAR             reduce using rule 15 (statement -> if .)
    LEFTPAREN       reduce using rule 15 (statement -> if .)
    ID              reduce using rule 15 (statement -> if .)
    EVAL            reduce using rule 15 (statement -> if .)
    NOT             reduce using rule 15 (statement -> if .)
    BINNOT          reduce using rule 15 (statement -> if .)
    TYPEOF          reduce using rule 15 (statement -> if .)
    IF              reduce using rule 15 (statement -> if .)
    WHILE           reduce using rule 15 (statement -> if .)
    FUNCTION        reduce using rule 15 (statement -> if .)
    NUMBER          reduce using rule 15 (statement -> if .)
    STRING          reduce using rule 15 (statement -> if .)
    UNDEFINED       reduce using rule 15 (statement -> if .)
    $end            reduce using rule 15 (statement -> if .)
    RIGHTBRACE      reduce using rule 15 (statement -> if .)
    SEMICOLON       reduce using rule 15 (statement -> if .)
    ELSE            reduce using rule 15 (statement -> if .)
    RIGHTPAREN      reduce using rule 15 (statement -> if .)


state 8

    (17) statement -> whileloop .
